--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.16.5",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "qrcode": "^1.5.4",
     "stripe": "^18.4.0",
     "svix": "^1.70.0"
   }
